@startuml

title __DASHBOARD's Class Diagram__\n

  namespace edu.temple.homerecognition {
    namespace ui.dashboard {
      class edu.temple.homerecognition.ui.dashboard.DashboardFragment {
          + onCreateView()
      }
    }
  }
  

  namespace edu.temple.homerecognition {
    namespace ui.dashboard {
      class edu.temple.homerecognition.ui.dashboard.DashboardViewModel {
          - mText : MutableLiveData<String>
          + DashboardViewModel()
          + getText()
      }
    }
  }
  

  edu.temple.homerecognition.ui.dashboard.DashboardFragment -up-|> androidx.fragment.app.Fragment
  edu.temple.homerecognition.ui.dashboard.DashboardFragment o-- edu.temple.homerecognition.ui.dashboard.DashboardViewModel : dashboardViewModel
  edu.temple.homerecognition.ui.dashboard.DashboardViewModel -up-|> androidx.lifecycle.ViewModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
